gen/algoritmiaParser.py
# Generated from C:/Users/Florian/Downloads/InterpreteILP/InterpreteILP/algoritmia.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class algoritmiaParser ( Parser ):

    grammarFileName = "algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'(:)'", "'<?>'", "'<-'", 
                     "'{'", "'}'", "'<w>'", "'if'", "'else'", "'while'", 
                     "'='", "'<'", "'>'", "'<='", "'>='", "'/='", "'<<'", 
                     "'8<'", "'['", "']'", "'+'", "'-'", "'#'", "'*'", "'/'", 
                     "'%'", "'('", "')'", "'###'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID_CAP", "ID_MIN", 
                      "STRING", "INT", "WS" ]

    RULE_programa = 0
    RULE_procedimiento = 1
    RULE_bloque = 2
    RULE_instruccion = 3
    RULE_reproduccion = 4
    RULE_lectura = 5
    RULE_asignacion = 6
    RULE_lista = 7
    RULE_escritura = 8
    RULE_condicional = 9
    RULE_while = 10
    RULE_invocacion = 11
    RULE_comparator = 12
    RULE_adicionLista = 13
    RULE_eliminacionLista = 14
    RULE_expresion = 15
    RULE_termino = 16
    RULE_factor = 17
    RULE_comentario = 18

    ruleNames =  [ "programa", "procedimiento", "bloque", "instruccion", 
                   "reproduccion", "lectura", "asignacion", "lista", "escritura", 
                   "condicional", "while", "invocacion", "comparator", "adicionLista", 
                   "eliminacionLista", "expresion", "termino", "factor", 
                   "comentario" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID_CAP=31
    ID_MIN=32
    STRING=33
    INT=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(algoritmiaParser.EOF, 0)

        def procedimiento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.ProcedimientoContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.ProcedimientoContext,i)


        def comentario(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.ComentarioContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.ComentarioContext,i)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = algoritmiaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30 or _la==31:
                self.state = 40
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [31]:
                    self.state = 38
                    self.procedimiento()
                    pass
                elif token in [30]:
                    self.state = 39
                    self.comentario()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(algoritmiaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimientoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_CAP(self):
            return self.getToken(algoritmiaParser.ID_CAP, 0)

        def bloque(self):
            return self.getTypedRuleContext(algoritmiaParser.BloqueContext,0)


        def ID_MIN(self, i:int=None):
            if i is None:
                return self.getTokens(algoritmiaParser.ID_MIN)
            else:
                return self.getToken(algoritmiaParser.ID_MIN, i)

        def getRuleIndex(self):
            return algoritmiaParser.RULE_procedimiento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedimiento" ):
                listener.enterProcedimiento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedimiento" ):
                listener.exitProcedimiento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedimiento" ):
                return visitor.visitProcedimiento(self)
            else:
                return visitor.visitChildren(self)




    def procedimiento(self):

        localctx = algoritmiaParser.ProcedimientoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedimiento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(algoritmiaParser.ID_CAP)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 48
                self.match(algoritmiaParser.ID_MIN)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(algoritmiaParser.T__0)
            self.state = 55
            self.bloque()
            self.state = 56
            self.match(algoritmiaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.InstruccionContext,i)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = algoritmiaParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 24981801752) != 0):
                self.state = 58
                self.instruccion()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lectura(self):
            return self.getTypedRuleContext(algoritmiaParser.LecturaContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(algoritmiaParser.AsignacionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(algoritmiaParser.EscrituraContext,0)


        def condicional(self):
            return self.getTypedRuleContext(algoritmiaParser.CondicionalContext,0)


        def while_(self):
            return self.getTypedRuleContext(algoritmiaParser.WhileContext,0)


        def invocacion(self):
            return self.getTypedRuleContext(algoritmiaParser.InvocacionContext,0)


        def reproduccion(self):
            return self.getTypedRuleContext(algoritmiaParser.ReproduccionContext,0)


        def expresion(self):
            return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,0)


        def adicionLista(self):
            return self.getTypedRuleContext(algoritmiaParser.AdicionListaContext,0)


        def eliminacionLista(self):
            return self.getTypedRuleContext(algoritmiaParser.EliminacionListaContext,0)


        def comentario(self):
            return self.getTypedRuleContext(algoritmiaParser.ComentarioContext,0)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = algoritmiaParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruccion)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.lectura()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.escritura()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.condicional()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.while_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.invocacion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.reproduccion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.expresion()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 72
                self.adicionLista()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 73
                self.eliminacionLista()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 74
                self.comentario()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReproduccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,0)


        def lista(self):
            return self.getTypedRuleContext(algoritmiaParser.ListaContext,0)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_reproduccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReproduccion" ):
                listener.enterReproduccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReproduccion" ):
                listener.exitReproduccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReproduccion" ):
                return visitor.visitReproduccion(self)
            else:
                return visitor.visitChildren(self)




    def reproduccion(self):

        localctx = algoritmiaParser.ReproduccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_reproduccion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(algoritmiaParser.T__2)
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24, 28, 31, 32, 34]:
                self.state = 78
                self.expresion()
                pass
            elif token in [6]:
                self.state = 79
                self.lista()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LecturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MIN(self):
            return self.getToken(algoritmiaParser.ID_MIN, 0)

        def getRuleIndex(self):
            return algoritmiaParser.RULE_lectura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLectura" ):
                listener.enterLectura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLectura" ):
                listener.exitLectura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLectura" ):
                return visitor.visitLectura(self)
            else:
                return visitor.visitChildren(self)




    def lectura(self):

        localctx = algoritmiaParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(algoritmiaParser.T__3)
            self.state = 83
            self.match(algoritmiaParser.ID_MIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MIN(self):
            return self.getToken(algoritmiaParser.ID_MIN, 0)

        def expresion(self):
            return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,0)


        def lista(self):
            return self.getTypedRuleContext(algoritmiaParser.ListaContext,0)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = algoritmiaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(algoritmiaParser.ID_MIN)
            self.state = 86
            self.match(algoritmiaParser.T__4)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24, 28, 31, 32, 34]:
                self.state = 87
                self.expresion()
                pass
            elif token in [6]:
                self.state = 88
                self.lista()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(algoritmiaParser.WS)
            else:
                return self.getToken(algoritmiaParser.WS, i)

        def getRuleIndex(self):
            return algoritmiaParser.RULE_lista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista" ):
                listener.enterLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista" ):
                listener.exitLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista" ):
                return visitor.visitLista(self)
            else:
                return visitor.visitChildren(self)




    def lista(self):

        localctx = algoritmiaParser.ListaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lista)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(algoritmiaParser.T__5)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 23907532800) != 0):
                self.state = 92
                self.expresion()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 58267271168) != 0):
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==35:
                        self.state = 93
                        self.match(algoritmiaParser.WS)


                    self.state = 96
                    self.expresion()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 104
            self.match(algoritmiaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,i)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(algoritmiaParser.STRING)
            else:
                return self.getToken(algoritmiaParser.STRING, i)

        def ID_MIN(self, i:int=None):
            if i is None:
                return self.getTokens(algoritmiaParser.ID_MIN)
            else:
                return self.getToken(algoritmiaParser.ID_MIN, i)

        def getRuleIndex(self):
            return algoritmiaParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscritura" ):
                return visitor.visitEscritura(self)
            else:
                return visitor.visitChildren(self)




    def escritura(self):

        localctx = algoritmiaParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_escritura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(algoritmiaParser.T__7)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        self.state = 107
                        self.expresion()
                        pass

                    elif la_ == 2:
                        self.state = 108
                        self.match(algoritmiaParser.STRING)
                        pass

                    elif la_ == 3:
                        self.state = 109
                        self.match(algoritmiaParser.ID_MIN)
                        pass

             
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,i)


        def comparator(self):
            return self.getTypedRuleContext(algoritmiaParser.ComparatorContext,0)


        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.BloqueContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.BloqueContext,i)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = algoritmiaParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(algoritmiaParser.T__8)
            self.state = 116
            self.expresion()
            self.state = 117
            self.comparator()
            self.state = 118
            self.expresion()
            self.state = 119
            self.match(algoritmiaParser.T__0)
            self.state = 120
            self.bloque()
            self.state = 121
            self.match(algoritmiaParser.T__1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 122
                self.match(algoritmiaParser.T__9)
                self.state = 123
                self.match(algoritmiaParser.T__0)
                self.state = 124
                self.bloque()
                self.state = 125
                self.match(algoritmiaParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(algoritmiaParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,i)


        def comparator(self):
            return self.getTypedRuleContext(algoritmiaParser.ComparatorContext,0)


        def bloque(self):
            return self.getTypedRuleContext(algoritmiaParser.BloqueContext,0)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = algoritmiaParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(algoritmiaParser.T__10)
            self.state = 130
            self.expresion()
            self.state = 131
            self.comparator()
            self.state = 132
            self.expresion()
            self.state = 133
            self.match(algoritmiaParser.T__0)
            self.state = 134
            self.bloque()
            self.state = 135
            self.match(algoritmiaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvocacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_CAP(self):
            return self.getToken(algoritmiaParser.ID_CAP, 0)

        def ID_MIN(self, i:int=None):
            if i is None:
                return self.getTokens(algoritmiaParser.ID_MIN)
            else:
                return self.getToken(algoritmiaParser.ID_MIN, i)

        def getRuleIndex(self):
            return algoritmiaParser.RULE_invocacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvocacion" ):
                listener.enterInvocacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvocacion" ):
                listener.exitInvocacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvocacion" ):
                return visitor.visitInvocacion(self)
            else:
                return visitor.visitChildren(self)




    def invocacion(self):

        localctx = algoritmiaParser.InvocacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_invocacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(algoritmiaParser.ID_CAP)
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 138
                    self.match(algoritmiaParser.ID_MIN) 
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return algoritmiaParser.RULE_comparator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparator" ):
                listener.enterComparator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparator" ):
                listener.exitComparator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparator" ):
                return visitor.visitComparator(self)
            else:
                return visitor.visitChildren(self)




    def comparator(self):

        localctx = algoritmiaParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 258048) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdicionListaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MIN(self):
            return self.getToken(algoritmiaParser.ID_MIN, 0)

        def expresion(self):
            return self.getTypedRuleContext(algoritmiaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return algoritmiaParser.RULE_adicionLista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdicionLista" ):
                listener.enterAdicionLista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdicionLista" ):
                listener.exitAdicionLista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdicionLista" ):
                return visitor.visitAdicionLista(self)
            else:
                return visitor.visitChildren(self)




    def adicionLista(self):
